tests/neg/missing-implicit4.check
-- Error: tests/neg/missing-implicit4.scala:14:4 -----------------------------------------------------------------------
14 |  ff // error
   |    ^
   |    no given instance of type Zip[Option] was found for parameter xs of method ff
   |
   |    The following import might fix the problem:
   |
   |      import instances.zipOption
   |
-- [E008] Not Found Error: tests/neg/missing-implicit4.scala:16:16 -----------------------------------------------------
16 |  List(1, 2, 3).traverse(x => Option(x)) // error
   |  ^^^^^^^^^^^^^^^^^^^^^^
   |  value traverse is not a member of List[Int], but could be made available as an extension method.
   |
   |  The following import might make progress towards fixing the problem:
   |
   |    import instances.traverseList
   |
-- Error: tests/neg/missing-implicit4.scala:20:42 ----------------------------------------------------------------------
20 |    List(1, 2, 3).traverse(x => Option(x)) // error
   |                                          ^
   |  no given instance of type Zip[Option] was found for an implicit parameter of method traverse in trait Traverse
   |
   |  The following import might fix the problem:
   |
   |    import instances.zipOption
   |
